Fix overflow-x for long pre blocks of text

--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,7 @@ ul.posts span {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
+  overflow-x: scroll;
 }
 
 #post ul, #post ol {
